[gd_scene load_steps=5 format=3 uid="uid://d2ppmi54aae6w"]

[ext_resource type="Script" path="res://Menus/CharacterUpgradeDeck.gd" id="1_mgbwx"]
[ext_resource type="Texture2D" uid="uid://brbjeel7swx6m" path="res://Content/images/barbara.tres" id="3_5tv2p"]
[ext_resource type="Texture2D" uid="uid://co6kqcrmq640p" path="res://Content/images/borderGlowing.tres" id="3_lilw2"]
[ext_resource type="PackedScene" uid="uid://bcp6vn43irr6d" path="res://Base/UIButton.tscn" id="4_8bwi7"]

[node name="CharacterUpgrade" type="NinePatchRect"]
self_modulate = Color(1, 0.196078, 0.0705882, 1)
z_index = 999
anchors_preset = -1
anchor_right = 0.103125
offset_right = 87.0
offset_bottom = 175.0
mouse_filter = 1
texture = ExtResource("3_lilw2")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("1_mgbwx")
metadata/_edit_use_anchors_ = true

[node name="portrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 14.0
offset_right = 35.0
offset_bottom = 78.0
texture = ExtResource("3_5tv2p")
metadata/_edit_use_anchors_ = true

[node name="charactername" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 8.0
offset_right = 66.0
offset_bottom = 20.0
text = "BLOBBER
"
metadata/_edit_use_anchors_ = true

[node name="goldamount" type="Label" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 28.0
offset_right = 84.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.988235, 0.854902, 0, 1)
text = "XXXX gold
"
metadata/_edit_use_anchors_ = true

[node name="hp_amount" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 94.0
offset_right = 44.0
offset_bottom = 106.0
text = "XX HP"
metadata/_edit_use_anchors_ = true

[node name="hp_button" parent="." instance=ExtResource("4_8bwi7")]
self_modulate = Color(1, 0.760784, 0.631373, 1)
layout_mode = 1
anchor_left = 0.551658
anchor_top = 0.565714
anchor_right = 0.551658
anchor_bottom = 0.565714
offset_left = 1.55072
offset_right = 44.421
offset_bottom = 19.0
callednode = "parent"
displaytext = "++"
buttonfunction = "buy_hp"

[node name="atk_amount" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 113.0
offset_right = 44.0
offset_bottom = 125.0
text = "XX ATK"
metadata/_edit_use_anchors_ = true

[node name="atk_button" parent="." instance=ExtResource("4_8bwi7")]
self_modulate = Color(1, 0.760784, 0.631373, 1)
layout_mode = 1
anchor_left = 0.551658
anchor_top = 0.565714
anchor_right = 0.551658
anchor_bottom = 0.565714
offset_left = 1.55072
offset_top = 19.0
offset_right = 44.421
offset_bottom = 38.0
callednode = "parent"
displaytext = "++"
buttonfunction = "buy_atk"
